[gd_scene load_steps=3 format=3 uid="uid://bo1otv8romnjw"]

[ext_resource type="Script" uid="uid://jut12x43mdvh" path="res://scenes/ui/main_ui.gd" id="1_1h4gc"]

[sub_resource type="LabelSettings" id="LabelSettings_1h4gc"]
font_size = 14

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1h4gc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WholeScreenTint" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.423529, 0.423529, 0.294118)

[node name="UITint" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_top = 112.0
offset_right = -110.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.446777, 0.446777, 0.446777, 0.678431)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="MainColumns" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CompassPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/CompassPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/CompassPanel/VBoxContainer"]
layout_mode = 2
text = "COMPASS"

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/CompassPanel/VBoxContainer"]
layout_mode = 2
text = "FACING:"
label_settings = SubResource("LabelSettings_1h4gc")

[node name="StatsPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/StatsPanel"]
layout_mode = 2
text = "STATS"

[node name="InventoryPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel"]
layout_mode = 2
columns = 4

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel4" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel5" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel6" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel7" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel8" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel9" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel10" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel11" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="Panel12" type="Panel" parent="CanvasLayer/MarginContainer/MainColumns/LeftColumn/InventoryPanel/GridContainer"]
layout_mode = 2

[node name="MiddleColumn" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipmentPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/MiddleColumn"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MainColumns/MiddleColumn/EquipmentPanel"]
layout_mode = 2
text = "EQUIPMENT"

[node name="MentalMapPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/MiddleColumn"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/MainColumns/MiddleColumn/MentalMapPanel"]
layout_mode = 2
text = "MENTAL MAP"

[node name="RightColumn" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlsPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="LoadButton" type="Button" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="GameStatsButton" type="Button" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "GAME STATS"

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="CanvasLayer/MarginContainer/MainColumns/RightColumn/ControlsPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
